Erstellung eines Headers

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </head>
 
 <body>
-  
+    <header>
+        <h1>Wasser-Erinnerung</h1>
+        <p>Remember - Stay Hydrated</p>
+    </header>
 </body>
 
 </html>
