--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
         <h1>Wasser-Erinnerung</h1>
         <p>Remember - Stay Hydrated</p>
     </header>
+
+    <main>
+
+    </main>
+    
+    <footer>
+
+    </footer>
 </body>
 
 </html>
