Container-getrunkene Glaeser erstellt

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
                     <a href="#" class="drank-waterButton">Ich habe Wasser getrunken</a>
                 </div>
         </div>
+
+        <div class="glasses">
+            <h2>Getrunkene Gläser</h2>
+            <div class="glass"></div>
+        </div>
     </main>
 
     <footer>
