--- a/index.html
+++ b/index.html
@@ -28,11 +28,15 @@
         <div class="glasses">
             <h2>Getrunkene Gläser</h2>
             <div class="glass"></div>
+            <div class="glass"></div>
+            <div class="glass"></div>
+            <div class="glass"></div>
+            <div class="glass"></div>
         </div>
     </main>
 
     <footer>
-
+        <p>&copy; Vivienne Sester ・ ON22 ・ Frontend Entwicklung</p>
     </footer>
 </body>
 
