--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Stay-Hydrated-App</title>
+    <script defer src="src\test.js"></script>
     <script defer src="./build/bundle.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
