--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main>
         <div class="textArea">
             <h2>Erinnerung</h2>
-            <p>Erfrische Geist und Körper - es ist Zeit, Wasser zu trinken</p>
+            <p id="reminderText">Erfrische Geist und Körper - es ist Zeit, Wasser zu trinken</p>
                 <div class="button">
                     <a href="#" class="remind-laterButton">Erinnere mich später</a>
                     <a href="#" class="drank-waterButton">Ich habe Wasser getrunken</a>
