id hinzugefuegt und id im footer

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <h2>Erinnerung</h2>
             <p id="reminderText">Erfrische Geist und Körper - es ist Zeit, Wasser zu trinken</p>
                 <div class="button">
-                    <a href="#" class="remind-laterButton">Erinnere mich später</a>
-                    <a href="#" class="drank-waterButton">Ich habe Wasser getrunken</a>
+                    <a href="#" id="remind-laterButton">Erinnere mich später</a>
+                    <a href="#" id="drank-waterButton">Ich habe Wasser getrunken</a>
                 </div>
         </div>
 
@@ -37,6 +37,7 @@
     </main>
 
     <footer>
+        <p id="notification">Erinnere mich später</p>
         <p>&copy; Vivienne Sester ・ ON22 ・ Frontend Entwicklung</p>
     </footer>
 </body>
