HTML,CSS und JS changes

--- a/index.html
+++ b/index.html
@@ -20,24 +20,20 @@
         <div class="textArea">
             <h2>Erinnerung</h2>
             <p id="reminderText">Erfrische Geist und Körper - es ist Zeit, Wasser zu trinken</p>
-                <div class="button">
-                    <a href="#" id="remind-laterButton">Erinnere mich später</a>
-                    <a href="#" id="drank-waterButton">Ich habe Wasser getrunken</a>
-                </div>
+            <button id="remind-laterButton">Erinnere mich später</button>    
         </div>
 
         <div class="glasses">
             <h2>Getrunkene Gläser</h2>
-            <div class="glass"></div>
-            <div class="glass"></div>
-            <div class="glass"></div>
-            <div class="glass"></div>
-            <div class="glass"></div>
+            <div id="glass1" class="glass"></div>
+            <div id="glass2" class="glass"></div>
+            <div id="glass3"class="glass"></div>
+            <div id="glass4" class="glass"></div>
+            <div id="glass5"class="glass"></div>
         </div>
     </main>
 
     <footer>
-        <p id="notification">Erinnere mich später</p>
         <p>&copy; Vivienne Sester ・ ON22 ・ Frontend Entwicklung</p>
     </footer>
 </body>
