--- a/index.html
+++ b/index.html
@@ -29,8 +29,11 @@
             <div id="glass2" class="glass"></div>
             <div id="glass3" class="glass"></div>
             <div id="glass4" class="glass"></div>
-            <div id="glass5" class="glass"></div>
+            <div id="glass5" class="glass"></div> 
+            <button id="reset">Reset</button>
         </div>
+
+       
     </main>
 
     <footer>
