--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Stay-Hydrated-App</title>
-    <script type="text/Javascript" src="test.js" defer></script>
-   <!--  <script defer src="./build/bundle.js"defer></script> -->
+    <!--  <script type="text/Javascript" src="test.js" defer></script>-->
+    <script defer src="./build/bundle.js"defer></script> 
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
