--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="textArea">
             <h2>Erinnerung</h2>
             <p id="reminderText">Erfrische Geist und Körper - es ist Zeit, Wasser zu trinken</p>
-            <button id="remind-laterButton">Erinnere mich später</button>    
+            <button id="remindLaterButton">Erinnere mich später</button>    
         </div>
 
         <div class="glasses">
