--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
     </header>
 
     <main>
-       <div class="container">
+        <div class="textArea">
+            <h2>Erinnerung</h2>
+            <p id="reminderText">Erfrische Geist und Körper - es ist Zeit, Wasser zu trinken</p>
+            <button id="remindLaterButton">Erinnere mich später</button>    
+        </div>
+
         <div class="glasses">
             <h2>Getrunkene Gläser</h2>
             <div id="glass1" class="glass"></div>
@@ -25,12 +30,10 @@
             <div id="glass3" class="glass"></div>
             <div id="glass4" class="glass"></div>
             <div id="glass5" class="glass"></div> 
+            <button id="reset">Zurücksetzen</button>
         </div>
 
-        <div class=button>
-              <button id="reset">Reset</button>
-       </div>
-    </div>
+       
     </main>
 
     <footer>
