Glaeser div und Klasse geben

--- a/index.html
+++ b/index.html
@@ -25,12 +25,14 @@
 
         <div class="glasses">
             <h2>Getrunkene Gläser</h2>
+            <div class="glassArea">
             <div id="glass1" class="glass"></div>
             <div id="glass2" class="glass"></div>
             <div id="glass3" class="glass"></div>
             <div id="glass4" class="glass"></div>
             <div id="glass5" class="glass"></div> 
-            <button id="reset">Zurücksetzen</button>
+            </div>
+            <button id="reset">Gläser leeren</button>
         </div>
 
        
