--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Stay-Hydrated-App</title>
-    <!--  <script type="text/Javascript" src="test.js" defer></script>-->
-    <script defer src="./build/bundle.js"defer></script> 
+    <!--  <script defer src="./build/bundle.js"defer></script> -->
+    <script  type="text/Javascript" defer src="test.js" ></script>
+    
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
@@ -26,11 +27,11 @@
         <div class="glasses">
             <h2>Getrunkene Gläser</h2>
             <div class="glassArea">
-            <div id="glass1" class="glass"></div>
-            <div id="glass2" class="glass"></div>
-            <div id="glass3" class="glass"></div>
-            <div id="glass4" class="glass"></div>
-            <div id="glass5" class="glass"></div> 
+                <div id="glass1" class="glass"></div>
+                <div id="glass2" class="glass"></div>
+                <div id="glass3" class="glass"></div>
+                <div id="glass4" class="glass"></div>
+                <div id="glass5" class="glass"></div> 
             </div>
             <button id="reset">Gläser leeren</button>
         </div>
