--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </header>
 
     <main>
+        <button>TEEEESSSSTTTT</button>
         <div class="textArea">
             <h2>Erinnerung</h2>
             <p id="reminderText">Erfrische Geist und Körper - es ist Zeit, Wasser zu trinken</p>
@@ -34,9 +35,7 @@
                 <div id="glass5" class="glass"></div> 
             </div>
             <button id="reset">Gläser leeren</button>
-        </div>
-
-       
+        </div>       
     </main>
 
     <footer>
