irgendwie hat es die ganze Zeit funktioniert?

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Stay-Hydrated-App</title>
     <!--  <script defer src="./build/bundle.js"defer></script> -->
-    <script  type="text/Javascript" defer src="test.js" ></script>
-    
+    <script type="text/javascript" src="test.js" defer></script>
+
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
@@ -15,10 +15,10 @@
     <header>
         <h1>Wasser-Erinnerung</h1>
         <p>Remember - Stay Hydrated</p>
+        <button id="startApp">Start App</button>
     </header>
 
     <main>
-        <button>TEEEESSSSTTTT</button>
         <div class="textArea">
             <h2>Erinnerung</h2>
             <p id="reminderText">Erfrische Geist und Körper - es ist Zeit, Wasser zu trinken</p>
